lib/bmc_video_windows_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class BmcVideoWindowsBindings {
  final ffi.DynamicLibrary _dylib;

  BmcVideoWindowsBindings(this._dylib);

  // ============================================================================
  // Camera Device Enumeration
  // ============================================================================

  /// Get number of available camera (video capture) devices.
  int getCameraDeviceCount() {
    return _getCameraDeviceCount();
  }

  late final _getCameraDeviceCountPtr =
      _dylib.lookupFunction<ffi.Int32 Function(), int Function()>(
          'getCameraDeviceCount');
  int _getCameraDeviceCount() => _getCameraDeviceCountPtr();

  /// Get the friendly name of a camera device by index.
  ffi.Pointer<ffi.Char> getCameraDeviceName(int index) {
    return _getCameraDeviceName(index);
  }

  late final _getCameraDeviceNamePtr = _dylib.lookupFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Int32),
      ffi.Pointer<ffi.Char> Function(int)>('getCameraDeviceName');
  ffi.Pointer<ffi.Char> _getCameraDeviceName(int index) =>
      _getCameraDeviceNamePtr(index);

  /// Get the symbolic link (ID) of a camera device by index.
  ffi.Pointer<ffi.Char> getCameraDeviceId(int index) {
    return _getCameraDeviceId(index);
  }

  late final _getCameraDeviceIdPtr = _dylib.lookupFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Int32),
      ffi.Pointer<ffi.Char> Function(int)>('getCameraDeviceId');
  ffi.Pointer<ffi.Char> _getCameraDeviceId(int index) =>
      _getCameraDeviceIdPtr(index);

  // ============================================================================
  // Camera Capture Control
  // ============================================================================

  /// Start camera capture on a background thread.
  int startCameraCapture(
      int deviceIndex, int width, int height, int fps, int jpegQuality) {
    return _startCameraCapture(deviceIndex, width, height, fps, jpegQuality);
  }

  late final _startCameraCapturePtr = _dylib.lookupFunction<
      ffi.Int32 Function(
          ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32),
      int Function(int, int, int, int, int)>('startCameraCapture');
  int _startCameraCapture(
          int deviceIndex, int width, int height, int fps, int jpegQuality) =>
      _startCameraCapturePtr(deviceIndex, width, height, fps, jpegQuality);

  /// Stop camera capture and release resources.
  void stopCameraCapture() {
    _stopCameraCapture();
  }

  late final _stopCameraCapturePtr =
      _dylib.lookupFunction<ffi.Void Function(), void Function()>(
          'stopCameraCapture');
  void _stopCameraCapture() => _stopCameraCapturePtr();

  /// Check if camera is currently capturing.
  int isCameraCapturing() {
    return _isCameraCapturing();
  }

  late final _isCameraCapturingPtr =
      _dylib.lookupFunction<ffi.Int32 Function(), int Function()>(
          'isCameraCapturing');
  int _isCameraCapturing() => _isCameraCapturingPtr();

  // ============================================================================
  // Frame Retrieval
  // ============================================================================

  /// Get the latest captured frame as JPEG-encoded bytes.
  int getLatestFrame(ffi.Pointer<ffi.Uint8> buffer, int bufferSize) {
    return _getLatestFrame(buffer, bufferSize);
  }

  late final _getLatestFramePtr = _dylib.lookupFunction<
      ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Int32),
      int Function(ffi.Pointer<ffi.Uint8>, int)>('getLatestFrame');
  int _getLatestFrame(ffi.Pointer<ffi.Uint8> buffer, int bufferSize) =>
      _getLatestFramePtr(buffer, bufferSize);

  /// Get the actual width of captured frames.
  int getFrameWidth() {
    return _getFrameWidth();
  }

  late final _getFrameWidthPtr =
      _dylib.lookupFunction<ffi.Int32 Function(), int Function()>(
          'getFrameWidth');
  int _getFrameWidth() => _getFrameWidthPtr();

  /// Get the actual height of captured frames.
  int getFrameHeight() {
    return _getFrameHeight();
  }

  late final _getFrameHeightPtr =
      _dylib.lookupFunction<ffi.Int32 Function(), int Function()>(
          'getFrameHeight');
  int _getFrameHeight() => _getFrameHeightPtr();
}
